fix time making mobile jump

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -95,6 +95,7 @@ p.hero__subtext--gray {
 .countdown {
   text-align: center;
   margin-top: 32px;
+  width: 95%;
 }
 
 .countdown__emphasis {
